# web-extension

./: .eslintrc.json  .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  amo.json  amo_metadata.json  manifest.json  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-pages.yml  publish.yml  scorecard.yml
cookie_lab/: __main__.py  app.py  config.py  models.py  scenarios.py
cookie_lab/static/: styles.css
cookie_lab/templates/: index.html
docs/: contributing.md  index.md
docs/extension/: architecture.md  usage.md
docs/stylesheets/: extra.css
docs/testing-app/: coverage-matrix.md  scenarios.md  standards-baseline.md
popup/: sereto.html  sereto.js
src/: manifest.json
src/popup/: sereto.css  sereto.html  sereto.js
tests/: test_app_endpoints.py  test_scenarios.py
tests/e2e/: test_extension_popup_smoke.py  test_extension_runtime_popup.py
