[project]
name = "sereto-cookie-lab"
version = "0.1.0"
description = "Standards-first cookie testing lab for SeReTo Helper extension QA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["Flask~=3.1", "cryptography~=46.0.5"]

[dependency-groups]
dev = ["pre-commit~=3.7"]
docs = ["zensical~=0.0.43", "mkdocstrings-python~=1.10"]
lint = ["ruff~=0.6"]
test = ["playwright~=1.54", "pytest~=9.0.3", "pytest-cov~=5.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["cookie_lab*"]

[build-system]
requires = ["setuptools~=68.0", "wheel"]
build-backend = "setuptools.build_meta"
